Add RefCounted.h (And remove Shared.h)
        * JavaScriptCore.vcproj/WTF/WTF.vcproj:



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27778 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/JavaScriptCore/ChangeLog
+++ b/JavaScriptCore/ChangeLog
@@ -1,3 +1,9 @@
+2007-11-13  Anders Carlsson  <andersca@apple.com>
+
+        Add RefCounted.h (And remove Shared.h)
+        
+        * JavaScriptCore.vcproj/WTF/WTF.vcproj:
+
 2007-11-13  Geoffrey Garen  <ggaren@apple.com>
 
         Build fix.
