--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,11 @@
+2007-11-13  Anders Carlsson  <andersca@apple.com>
+
+        Fix Windows build.
+        
+        * platform/Cursor.h:
+        * plugins/win/PluginPackageWin.h:
+        * plugins/win/PluginStreamWin.h:
+
 2007-11-13  Geoffrey Garen  <ggaren@apple.com>
 
         Reviewed by Anders Carlsson.
