Add the http/tests/media directory to the Windows Skipped file
        * platform/win/Skipped:


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27783 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,9 @@
+2007-11-13  Adam Roben  <aroben@apple.com>
+
+        Add the http/tests/media directory to the Windows Skipped file
+
+        * platform/win/Skipped:
+
 2007-11-13  Sam Weinig  <sam@webkit.org>
 
         Reviewed by Adam Roben.
