Try to make this test less timing dependent.
        * media/video-currentTime-set-expected.txt:
        * media/video-currentTime-set.html:



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27791 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,10 @@
+2007-11-14  Antti Koivisto  <antti@apple.com>
+
+        Try to make this test less timing dependent.
+
+        * media/video-currentTime-set-expected.txt:
+        * media/video-currentTime-set.html:
+
 2007-11-14  Anders Carlsson  <andersca@apple.com>
 
         Reviewed by Adam.
