Shut up FixMIDLHeaders.pl
        * WebKit.vcproj/FixMIDLHeaders.pl:


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27797 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebKit/win/ChangeLog
+++ b/WebKit/win/ChangeLog
@@ -1,5 +1,11 @@
 2007-11-14  Adam Roben  <aroben@apple.com>
 
+        Shut up FixMIDLHeaders.pl
+
+        * WebKit.vcproj/FixMIDLHeaders.pl:
+
+2007-11-14  Adam Roben  <aroben@apple.com>
+
         Change Interfaces to use a Utility configuration
 
         It had previously been marked as an "Application (.exe)", which is
