Try to make this test less timing dependent.
        * http/tests/media/video-play-stall.html:



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27801 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/LayoutTests/ChangeLog
+++ b/LayoutTests/ChangeLog
@@ -1,3 +1,9 @@
+2007-11-14  Antti Koivisto  <antti@apple.com>
+
+        Try to make this test less timing dependent.
+
+        * http/tests/media/video-play-stall.html:
+
 2007-11-14  Beth Dakin  <bdakin@apple.com>
 
         Reviewed by Hyatt.
