Windows build fix.
        * JavaScriptCore.vcproj/JavaScriptCore.make:



git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27812 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/JavaScriptCore/ChangeLog
+++ b/JavaScriptCore/ChangeLog
@@ -1,3 +1,9 @@
+2007-11-15  Steve Falkenburg  <sfalken@apple.com>
+
+        Windows build fix.
+
+        * JavaScriptCore.vcproj/JavaScriptCore.make:
+
 2007-11-14  Alexey Proskuryakov  <ap@webkit.org>
 
         Reviewed by Darin.
