Make run-safari actually work on Windows
        * Scripts/run-safari: Fixed the order of arguments to cp, and added a
        chdir call.


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27817 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/WebKitTools/ChangeLog
+++ b/WebKitTools/ChangeLog
@@ -1,3 +1,10 @@
+2007-11-15  Adam Roben  <aroben@apple.com>
+
+        Make run-safari actually work on Windows
+
+        * Scripts/run-safari: Fixed the order of arguments to cp, and added a
+        chdir call.
+
 2007-11-14  Adam Roben  <aroben@apple.com>
 
         Updates to Safari launching now that 3.0.4 is released
