--- a/WebCore/ChangeLog
+++ b/WebCore/ChangeLog
@@ -1,3 +1,12 @@
+2007-11-15  Jon Honeycutt  <jhoneycutt@apple.com>
+
+        Reviewed by Anders.
+
+        NP_ASFILEONLY streams should not buffer data in m_deliveryData.
+
+        * plugins/win/PluginStreamWin.cpp:
+        (WebCore::PluginStreamWin::didReceiveData):
+
 2007-11-15  Justin Garcia  <justin.garcia@apple.com>
 
         Reviewed by Adele Peterson.
