2007-11-15  Eric Seidel  <eric@webkit.org>
        Reviewed by Sam.

        Clean up match function to match WebKit style

        * JavaScriptCore.xcodeproj/project.pbxproj:
        * pcre/pcre_exec.cpp:
        (match):


git-svn-id: http://svn.webkit.org/repository/webkit/trunk@27828 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/JavaScriptCore/ChangeLog
+++ b/JavaScriptCore/ChangeLog
@@ -1,3 +1,13 @@
+2007-11-15  Eric Seidel  <eric@webkit.org>
+
+        Reviewed by Sam.
+
+        Clean up match function to match WebKit style
+
+        * JavaScriptCore.xcodeproj/project.pbxproj:
+        * pcre/pcre_exec.cpp:
+        (match):
+
 2007-11-15  Steve Falkenburg  <sfalken@apple.com>
 
         Windows build fix.
